# modman

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/examples/: detect.rs
core/src/: archive.rs  conflict.rs  deploy.rs  error.rs  fomod.rs  game.rs  launchers.rs  lib.rs  loadorder.rs  manager.rs  paradoxdb.rs  plugins.rs  profile.rs  redmod.rs  store.rs  vdf.rs  vfs.rs
core/tests/: conflict.rs  fomod.rs  pipeline.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/ui/: app.slint
nexus/: Cargo.toml
nexus/examples/: search.rs
nexus/src/: client.rs  error.rs  lib.rs  nxm.rs  protocol.rs
platform/: Cargo.toml
platform/examples/: probe.rs  search.rs
platform/src/: download.rs  gamebanana.rs  lib.rs  modio.rs  thunderstore.rs
