[workspace]
resolver = "2"
members = ["core", "nexus", "platform", "gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["modeman contributors"]
repository = "https://github.com/modeman/modeman"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
walkdir = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
