[package]
name = "modeman-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "modeman"

[[bin]]
name = "modeman"
path = "src/main.rs"

[dependencies]
modeman-core = { path = "../core" }
modeman-nexus = { path = "../nexus" }
modeman-platform = { path = "../platform" }
slint = "1.8"
rfd = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1.8"
