[package]
name = "modeman-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "modeman_platform"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
